Fix slider overflows burger menu

--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -12,7 +12,7 @@
   width: 100%;
   height: 100%;
   position: fixed;
-  z-index: 1;
+  z-index: 2;
   overflow-y: hidden;
 
   @media only screen and (min-width: 640px) {
